--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@
 title: Edisphere
 email: info@edisphere.com
 description: Innovative Data Integration Platform
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "https://vksinghbhu2.github.io" # the subpath of your site, e.g. /blog
+url: "/edisphere.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
